Add Mini Banner and Full Banner Components

--- a/index.html
+++ b/index.html
@@ -55,7 +55,36 @@
             </div>
         </div>
 
-        <!-- Loading Heavy Scripts -->
+        <!-- ******************** SECTION - MINI BANNER ******************** -->
+
+        <div class="miniBanner">
+    	    <div class="container">
+    			<div class="row">
+    				<h3> Title </h3>
+    			</div>
+    	    </div>
+    	</div>
+
+        <!-- ******************** SECTION - FULL BANNER ******************** -->
+
+        <div class="fullBanner">
+    	    <div class="container">
+    			<div class="row">
+                    <div class= "col-lg-6 bannerTextColumn">
+    					<h1> Banner Title </h1>
+    					<h5> Description Description Description Description Description Description Description </h5>
+    				</div>
+
+    				<div class="col-lg-6">
+    					<img class= "bannerImage" src="images/banner01.jpg">
+    				</div>
+    			</div>
+    	    </div>
+    	</div>
+
+        <div class="sectionTestingSpacing"> </div>
+
+        <!-- ******************** LOADING HEAVY SCRIPTS ******************** -->
 
         <script src="javascript/jquery.js"></script>            <!-- Jquery Java Script -->
         <script src="bootstrap/js/bootstrap.min.js"></script>   <!-- Bootstrap Java Script -->
