--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
         <title> City Of The Zombies </title>
 
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">  <!-- Bootstrap core CSS -->
-        <link href="css/font-awesome.min.css" rel="stylesheet">     <!-- Icons Style -->
-        <link href="css/style.css" rel="stylesheet">                <!-- Website Style Sheet -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">    <!-- Bootstrap Style -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">                  <!-- Icons Style -->
+
+        <!-- Website Style Sheet -->
+        <link href="css/style.css" rel="stylesheet">
 
         <!-- Important Scripts -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>    <!-- Angular JS Script -->
@@ -22,44 +24,58 @@
     </head>
 
     <body ng-app="myGameApplication">
-        <!-- ******************** SECTION - NAVIGATION BAR ******************** -->
+        <!-- ******************** SECTION - TOP NAVIGATION BAR ******************** -->
 
-        <div class="navigationSection">
-            <div class="navbar navbar-default navbar-fixed-top">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only"> Toggle navigation </span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
+        <div class="topNavigation">
+            <div class="heading">
+                <div class="top-left">
+                    <a class="navbar-brand">    <h4> City Of The Zombies </h4>  </a>
+                    <a class="menuToggle">      <i class="fas fa-bars"></i>     </a>
+                </div>
 
-                        <a class="navbar-brand" href="index.html"> City Of The Zombies </a>
-                    </div>
-
-                    <div class="navbar-collapse collapse navbar-right">
-                        <ul class="nav navbar-nav">
-                            <li class="active"> <a href="">    Home    </a> </li>
-                            <li> <a href="#">    News    </a> </li>
-
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Game Information <span class="caret"> </span> </a>
-
-                                <ul class="dropdown-menu">
-                                    <li> <a href="#">     Getting Started     </a> </li>
-                                    <li> <a href="#">     Customisation       </a> </li>
-                                    <li> <a href="#">     Game Progress       </a> </li>
-                                </ul>
-                            </li>
-
-                            <li> <a href="#">    Media       </a> </li>
-                            <li> <a href="#">    Team        </a> </li>
-                            <li> <a href="#">    Contact Us  </a> </li>
-                        </ul>
-                    </div>
+                <div class="top-right">
+                    <button type="button" class="btn btn-outline-dark"> <i class="fas fa-home"></i> Log In    </button>
+                    <button type="button" class="btn btn-outline-dark"> <i class="fas fa-home"></i> Register  </button>
                 </div>
             </div>
+        </div>
+
+        <!-- ******************** SECTION - SIDEBAR NAVIGATION BAR ******************** -->
+
+        <div class="sideNavigation">
+            <nav class="navbar navbar-expand-sm navbar-default">
+                <div class="main-menu collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active">
+                                <a href="index.html">   <i class="fas fa-home"></i>     Home        </a>
+                        </li>
+
+                        <li class="menu-title">    Game News            </li>
+                        <li>    <a href="#">    <i class="fas fa-home"></i>     News                </a>    </li>
+                        <li>    <a href="#">    <i class="fas fa-home"></i>     Media               </a>    </li>
+
+                        <li class="menu-title">    Game Information     </li>
+                        <li>    <a href="#">    <i class="fas fa-home"></i>     Getting Started     </a>    </li>
+                        <li>    <a href="#">    <i class="fas fa-home"></i>     Customisation       </a>    </li>
+                        <li>    <a href="#">    <i class="fas fa-home"></i>     Game Progress       </a>    </li>
+
+                        <li class="menu-title">    Communication     </li>
+                        <li>    <a href="#">    <i class="fas fa-home"></i>     Team                </a>    </li>
+                        <li>    <a href="#">    <i class="fas fa-home"></i>     Contact Us          </a>    </li>
+
+                        <li class="menu-title">    Development     </li>
+                        <li class="menuDropDown">
+                            <a href="#" class="menuDropDownTitle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-home"></i>   Components
+                            </a>
+
+                            <ul class="dropdown-menu">
+                                <li>    <a href="#">    <i class="fas fa-home"></i>     Buttons     </a>    </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
 
         <!-- ******************** SECTION - FULL BANNER ******************** -->
@@ -85,18 +101,19 @@
         <!-- ******************** SECTION - MINI BANNER ******************** -->
 
         <div class="miniBanner">
-    	    <div class="container">
-    			<div class="row">
-    				<h3> Title </h3>
-    			</div>
-    	    </div>
-    	</div>
+            <div class="container">
+                <div class="row">
+                    <h3> Title </h3>
+                </div>
+            </div>
+        </div>
 
         <div class="sectionTestingSpacing"> </div>
 
         <!-- ******************** SHARING COMMON CONTROLLERS ******************** -->
 
         <div ng-controller="myTableGameProgressController">
+
             <!-- ******************** TRELLO GAME PROGRESS ******************** -->
 
             <div class="container">
@@ -214,11 +231,13 @@
 
         <!-- ******************** LOADING HEAVY SCRIPTS ******************** -->
 
-        <script src="javascript/standardLibraries/jquery.js"></script>              <!-- Jquery Java Script -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>            <!-- Jquery Java Script -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>   <!-- Bootstrap Javascript Plugin -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>         <!-- Bootstrap Javascript -->
+
         <script src="javascript/standardLibraries/FileSaver.js"></script>           <!-- File Saving Java Script -->
-        <script src="bootstrap/js/bootstrap.min.js"></script>                       <!-- Bootstrap Java Script -->
-        
-        <!-- Controllers for the portfolio website -->
+
+        <!-- Controllers for the Chart Game Progress -->
         <script src="javascript/controller/chartGameProgress.js"></script>
 
         <!-- Importing the website manager -->
