Convert Full Banner to Description Banner and fix with new styling

--- a/index.html
+++ b/index.html
@@ -78,29 +78,29 @@
             </nav>
         </div>
 
-        <!-- ******************** SECTION - FULL BANNER ******************** -->
+        <div class="content">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card cardBlueGradient">
+                        <!-- ******************** SECTION - DESCRIPTION BANNER ******************** -->
 
-        <div class="fullBanner">
-            <div class="container">
-                <div class="row">
-                    <div class= "col-lg-12">
-                        <h2> Banner Title </h2>
-                        <h5> Description Description Description Description Description Description Description </h5>
+                        <div class="descriptionBanner">
+                            <h2> Banner Title </h2>
+                            <h5> Description Description Description Description Description Description Description </h5>
 
-                        <div class="buttonHolder">
-                            <button type="button" class="btn btn-success"> Button 1 </button>
-                            <button type="button" class="btn btn-success"> Button 2 </button>
+                            <div class="buttonHolder">
+                                <button type="button" class="btn btn-primary"> Button 1 </button>
+                                <button type="button" class="btn btn-primary"> Button 2 </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="sectionTestingSpacing"> </div>
+        <!-- ******************** SECTION - TITLE BANNER ******************** -->
 
-        <!-- ******************** SECTION - MINI BANNER ******************** -->
-
-        <div class="miniBanner">
+        <div class="titleBanner">
             <div class="container">
                 <div class="row">
                     <h3> Title </h3>
