--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">    <!-- Bootstrap Style -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">                  <!-- Icons Style -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">                        <!-- Font -->
 
         <!-- Website Style Sheet -->
         <link href="css/style.css" rel="stylesheet">
@@ -84,7 +85,7 @@
                     <div class="card cardBlueGradient">
                         <!-- ******************** SECTION - DESCRIPTION BANNER ******************** -->
 
-                        <div class="descriptionBanner">
+                        <div class="descriptionBanner text-center">
                             <h2> Banner Title </h2>
                             <h5> Description Description Description Description Description Description Description </h5>
 
@@ -95,20 +96,18 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
 
-        <!-- ******************** SECTION - TITLE BANNER ******************** -->
+                <div class="col-md-12">
+                    <div class="card cardBlue">
+                        <!-- ******************** SECTION - TITLE BANNER ******************** -->
 
-        <div class="titleBanner">
-            <div class="container">
-                <div class="row">
-                    <h3> Title </h3>
+                        <div class="titleBanner text-center">
+                            <h3> Title </h3>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-
-        <div class="sectionTestingSpacing"> </div>
 
         <!-- ******************** SHARING COMMON CONTROLLERS ******************** -->
 
